unpackaged/objects/SSIS_TrackWise__c.object
<CustomObject>
  <fields>
    <fullName>Catalog_Model__c</fullName>
    <label>Catalog / Model</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Default_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SSIS: TrackWise</relationshipLabel>
    <relationshipName>SSIS_TrackWise</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Default_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SSIS: TrackWise</relationshipLabel>
    <relationshipName>SSIS_TrackWise</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>24</length>
    <type>Text</type>
  </fields>
  <label>SSIS: TrackWise</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <label>Complaint Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>SSIS: TrackWise</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>